<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			tools:context=".main" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/team_a"
				android:fontFamily="sans-serif-medium"
				android:textSize="14sp"
				android:textColor="#616161"
				android:gravity="center_horizontal"
				android:padding="16dp"/>

			<TextView
				android:id="@+id/team_a_score"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="0"
				android:paddingBottom="24dp"
				android:fontFamily="sans-serif-light"
				android:textSize="56sp"
				android:textColor="#000000"
				android:gravity="center_horizontal" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addThreeForTeamA"
				android:text="@string/plus3" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addTwoForTeamA"
				android:text="@string/plus2" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addOneForTeamA"
				android:text="@string/plus1" />
			
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="minusOneFromTeamA"
				android:text="@string/minus1" />

		</LinearLayout>

		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:layout_marginTop="16dp"
			android:background="#E4E4E4"/>

		<LinearLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/team_b"
				android:fontFamily="sans-serif-medium"
				android:textSize="14sp"
				android:textColor="#616161"
				android:gravity="center_horizontal"
				android:padding="16dp"/>

			<TextView
				android:id="@+id/team_b_score"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="0"
				android:paddingBottom="24dp"
				android:fontFamily="sans-serif-light"
				android:textSize="56sp"
				android:textColor="#000000"
				android:gravity="center_horizontal" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addThreeForTeamB"
				android:text="@string/plus3" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addTwoForTeamB"
				android:text="@string/plus2" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="addOneForTeamB"
				android:text="@string/plus1" />
			
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:onClick="minusOneFromTeamB"
				android:text="@string/minus1" />

		</LinearLayout>

	</LinearLayout>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="resetScores"
		android:text="@string/reset"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="22dp"
		android:layout_marginRight="22dp" />

</RelativeLayout>
